# vibehub

./: .gitignore  AGENT_TEAM_SUMMARY.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  pyrightconfig.json  vibehub.db-journal
backend/agent/: callback_registry.py  few_shot_examples.py  file_constraints.py  graph.py  llm_content.py  overlay.js  prompts.py  state.py
backend/agent/nodes/: blueprint.py  cms_setup.py  code_review.py  conversation_edit.py  finalizing.py  incremental_phase.py  phase_implementation.py  pre_validation.py  sandbox_execution.py  sandbox_fix.py
backend/api/: routes.py  schemas.py  websocket.py
backend/db/: crud.py  database.py  models.py
backend/docs/agent-reports/: existing-mechanism-analysis.md  industry-research.md
backend/sandbox/: e2b_backend.py
backend/scripts/: create_e2b_template.py
backend/services/: template_service.py
backend/tests/: check_sandbox.py  test_nextjs_full_template.py  test_nextjs_sandbox.py  test_phase_implementation_feedback_prompt.py  test_pre_validation_retry_phase.py  test_sandbox_build_and_start.py
docs/: README.md  ai-code-quality-plan.md  ai-code-quality.md  codegen-graph-langgraph.mmd  codegen-graph-v0.5.0.mmd  codegen-graph.mmd  model-switching.md  visual-editor-enhancement-plan.md
docs/plans/: 2025-02-28-component-modification-design.md  (+4 more)
e2b-templates/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
static/: overlay.js
vibehub-ai-sdk/: package-lock.json  package.json
(+64 files in other folders)
